--- a/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
@@ -80,7 +80,7 @@
 <body>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
-
+{% block sidebar %}
     <!-- Start Sidebar -->
 
     <div class="wrapper">
@@ -191,7 +191,7 @@
     </div>
 
     <!-- End Sidebar -->
-
+{% endblock sidebar %}
 
     <!-- Start Navbar -->
 
